# mas_vision_new

./: CMakeLists.txt
applications/: main.cpp
applications/calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_worldhandeye.cpp
auto_aim/: CMakeLists.txt  armor_types.hpp
auto_aim/armor_detector/: armor_detector.cpp  armor_detector.hpp  armor_pose.cpp  armor_pose.hpp  number_classifier.cpp  number_classifier.hpp
auto_aim/armor_tracking/: armor_target.cpp  armor_target.hpp  armor_track.cpp  armor_track.hpp
auto_aim/thread/: auto_aim_thread.cpp
auto_aim/thread/auto_aim_info/: auto_aim_info.cpp  auto_aim_info.hpp
config/: auto_aim.yaml  camera_set.json  camera_set.yaml  serial_config.yaml  utils.yaml
hikcamera/: CMakeLists.txt
hikcamera/SDK/lib/32/: libMVGigEVisionSDK.so.4.5.0.3  libMvUsb3vTL.so.4.5.0.3
hikcamera/include/: HikCamera.h
hikcamera/src/: HikCamera.cpp
hikcamera/thread/: cam_thread.cpp
rm_utils/: CMakeLists.txt
rm_utils/PubSub/: pubsub.cpp  pubsub.hpp
rm_utils/PubSub/thread/: pubsub_thread.cpp
rm_utils/TopicQueue/: topicqueue.hpp
rm_utils/math/: extended_kalman_filter.cpp  extended_kalman_filter.hpp  rmmath.cpp  rmmath.hpp
rm_utils/performance_monitor/: performance_monitor.cpp  performance_monitor.hpp
rm_utils/recorder/: recorder.cpp  recorder.hpp
rm_utils/udp/: udp_comm.cpp  udp_comm.hpp
rm_utils/ulog/: ulog.cpp  ulog.hpp
rm_utils/video/: video.cpp  video.hpp
serial/: CMakeLists.txt  serial_types.hpp
serial/common/include/serial/: serial.h
serial/common/include/serial/impl/: unix.h
serial/thread/: serial_thread.cpp
